# AutoMLPipeline.jl

./: .gitattributes  .gitignore  .travis.yml  CITATION.cff  CONCEPTS.md  CONTRIBUTORS.md  CondaPkg.toml  MAINTAINERS.md  Project.toml  README.md  travis.yml
AutoAD/: Project.toml  test_caret_tspredictor.jl  test_skanomalydetector.jl
AutoAI/: AutoAI.ipynb  CondaPkg.toml  FinOPS.ipynb  Project.toml  driver.jl  main.jl  todo
AutoTS/: CondaPkg.toml  Project.toml
DockerizedAutoAD/: CondaPkg.toml  Dockerfile  Project.toml  automl_precompile.jl  automl_sysimage.jl  main.jl  run.sh
DockerizedAutoML/: Dockerfile  Project.toml  automl_precompile.jl  automl_sysimage.jl  main.jl  run.sh
DockerizedAutoTS/: iris_reg.csv  main.jl  run.sh
E2EAI/: Project.toml  dockerbuild.sh  main.jl
argo-workflow/: automl-anomalydetection-template.yaml  automl-classification-template.yaml  automl-dualsearch-template.yaml  automl-regression-template.yaml  automl-unisearch-template.yaml  automlad-ensemble-template.yaml  automlai-dualsearch-template.yaml  automlai-prediction-classification-template.yaml  automlai-prediction-regression-template.yaml  automlai-prediction-template.yaml  automlai-unisearch-template.yaml  multi-agent-argo-k8s-mcp-flowise.json  run.sh
data/: cmc.csv  diabetes.csv  profb.csv  testdata.csv  testdata.csv.bz2
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl  (+1 more)
src/: data  (+18 more)
webui-rust/: Cargo.toml  README.md  kairos.pptx
webui-rust/public/: app.js  index.html  markdown.js  styles.css
webui-rust/src/: main.rs
(+546 files in other folders)
