[package]
name = "argo-automl-webui-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
temp-env = "0.3"
